# power_market_pipeline

./: ._.env  .env.example  .gitignore  AGENTS.md  API_ENDPOINT_ISSUES.md  AS_CALCULATION_BUGS_SUMMARY.md  AS_FIXES_SUMMARY.md  AUTO_RESUME_SUMMARY.md  AVAILABLE_DATA_INVENTORY.md  BATTERY_AUTO_BIDDING_ARCHITECTURE.md  BATTERY_STORAGE_DOWNLOAD_README.md  BENCHMARK_CORRECTION.md  BESS_ANALYSIS_INDEX.md  BESS_CHARGING_FINAL_ANSWER.md  BESS_COMPREHENSIVE_ANALYSIS.md  BESS_CRON_SETUP.md  BESS_DATA_PIPELINE_COMPLETE.md  BESS_QUICK_REFERENCE.txt  BESS_REVENUE_ANALYSIS_COMPLETE.md  BESS_REVENUE_FINAL_PLAN.md  BESS_Revenue_Analysis_Report.md  CLAUDE.md  COMPREHENSIVE_GENERATOR_MAPPING_SUMMARY.json  CRON_SETUP_SUMMARY.md  Cargo.toml  DATA_DOWNLOAD_SUMMARY.md  DEMAND_RESPONSE_CATALOG_README.md  DOWNLOAD_STATUS_SUMMARY.md  DR_RESEARCH_BATCH_2_SUMMARY.md  DR_RESEARCH_BATCH_4_SUMMARY.md  DR_RESEARCH_BATCH_6_SUMMARY.md  DR_RESEARCH_BATCH_7_SUMMARY.md  DR_RESEARCH_BATCH_9_SUMMARY.md  ECRS_REVENUE_ROOT_CAUSE_ANALYSIS.md  ENDPOINT_FIXES_STATUS.md  ERCOT_BESS_Market_Report.md  ERCOT_WEB_SERVICE_DOWNLOAD_README.md  ERCOT_WEB_SERVICE_IMPLEMENTATION_SUMMARY.md  ERCOT_WIDE_BESS_ROLLUP_SUMMARY.md  FINAL_FIX_SUMMARY.md  (+221 more)
bess_mapping/: README.md  (+17 more)
ercot_data_processor/: .gitignore  Cargo.toml  check_dam_schema.py  count_files.sh  inspect_60day_files.py  reprocess_cop_files.sh  reprocess_cop_only.sh  rollup_60day_data.py  rollup_dam_disclosure.py  run_daily_revenue_2024.sh  run_daily_test.sh  simple_bess_test.py  test_2011_rollup.sh  test_rust_bess.py  verify_dam_2025.py  verify_sced_2025.py
ercot_data_processor/.cargo/: config.toml
ercot_data_processor/specs/: COP_Parsing_Issue_Summary.md
ercot_data_processor/src/: ancillary_processor.rs  annual_processor.rs  bess_analyzer.rs  bess_complete_analyzer.rs  bess_comprehensive_calculator.rs  bess_daily_revenue_fixed.rs  bess_daily_revenue_processor.rs  bess_daily_revenue_simple.rs  bess_disclosure_analyzer.rs  bess_historical_analyzer.rs  bess_market_report.rs  bess_parquet_analyzer.rs  bess_parquet_calculator.rs  bess_parquet_revenue_processor.rs  bess_revenue_calculator.rs  bess_visualization.rs  bess_yearly_analysis.rs  cop_file_reader.rs  dam_processor.rs  disclosure_fast_processor.rs  disclosure_processor.rs  enhanced_annual_processor.rs  enhanced_annual_processor_validated.rs  ercot_all_float_columns.rs  ercot_price_processor.rs  ercot_processor.rs  ercot_unified_processor.rs  gap_analyzer.rs  lib.rs  lmp_fast_processor.rs  lmp_full_processor.rs  lmp_processor.rs  main.rs  parquet_util.rs  parquet_verifier.rs  rt_parallel_processor.rs  schema_detector.rs  schema_normalizer.rs  simple_bess_calculator.rs  tbx_calculator.rs  (+4 more)
ercot_data_processor/tbx_calculator/: TBX_DESIGN.md
ercot_price_service/: Cargo.toml  Dockerfile  Makefile  README.md  build.sh  docker-compose.yml
ercot_price_service/specs/: API_SPECIFICATION.md  ARCHITECTURE.md  DEPLOYMENT.md
ercot_price_service/src/: data_loader.rs  flight_service.rs  json_api.rs  lib.rs  main.rs  models.rs
ercot_webservices/ercot_api/: README.md  pyproject.toml
ercot_webservices/ercot_api/api/emil_products/: get_list_for_products.py  get_product.py  get_product_archives.py  get_product_bundle.py  get_product_history.py  get_product_history_bundles.py
ercot_webservices/ercot_api/api/np1_301/: get_data_60_cop_adj_period_snapshot.py
ercot_webservices/ercot_api/api/np3_233_cd/: get_data_hourly_res_outage_cap.py
ercot_webservices/ercot_api/api/np3_565_cd/: get_data_lf_by_model_weather_zone.py
ercot_webservices/ercot_api/api/np3_566_cd/: get_data_lf_by_model_study_area.py
ercot_webservices/ercot_api/api/np3_765_cd/: get_data_approved_dctie_schedules.py
ercot_webservices/ercot_api/api/np3_910_er/: get_data_2_d_agg_dsr_loads.py  get_data_2_d_agg_gen_summary.py  get_data_2_d_agg_gen_summary_houston.py  get_data_2_d_agg_gen_summary_north.py  get_data_2_d_agg_gen_summary_south.py  get_data_2_d_agg_gen_summary_west.py  get_data_2_d_agg_load_summary.py  get_data_2_d_agg_load_summary_houston.py  get_data_2_d_agg_load_summary_north.py  get_data_2_d_agg_load_summary_south.py  get_data_2_d_agg_load_summary_west.py  get_data_2_d_agg_out_sched.py  get_data_2_d_agg_out_sched_houston.py  get_data_2_d_agg_out_sched_north.py  get_data_2_d_agg_out_sched_south.py  get_data_2_d_agg_out_sched_west.py
ercot_webservices/ercot_api/api/np3_911_er/: get_data_2_d_agg_as_offers_ecrsm.py  get_data_2_d_agg_as_offers_ecrss.py  get_data_2_d_agg_as_offers_offns.py  get_data_2_d_agg_as_offers_onns.py  get_data_2_d_agg_as_offers_regdn.py  get_data_2_d_agg_as_offers_regup.py  get_data_2_d_agg_as_offers_rrsffr.py  get_data_2_d_agg_as_offers_rrspfr.py  get_data_2_d_agg_as_offers_rrsufr.py  get_data_2_d_cleared_dam_as_ecrsm.py  get_data_2_d_cleared_dam_as_ecrss.py  get_data_2_d_cleared_dam_as_nspin.py  get_data_2_d_cleared_dam_as_regdn.py  (+13 more)
ercot_webservices/ercot_api/models/: __init__.py  archive.py  archive_request.py  artifact.py  exception.py  exception_data.py  field.py  info.py  link.py  product.py  product_content_type.py  product_history.py  product_history_metadata.py  product_protocol_rules.py  query_metadata.py  query_metadata_parameters.py  query_metadata_parameters_additional_property.py  report.py  report_data.py  report_metadata.py  result_metadata.py  version.py
iso_markets/ercot/ercot_extractor/: Cargo.toml
(+845 files in other folders)
