[package]
name = "ercot_rt_processor"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.8"
arrow = "50.0"
parquet = "50.0"
glob = "0.3"
anyhow = "1.0"
indicatif = "0.17"
dashmap = "5.5"
num_cpus = "1.16"
itertools = "0.12"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3