[workspace]
members = [
    ".",
    "tbx_calculator",
]
resolver = "2"

[package]
name = "ercot_data_processor"
version = "0.1.0"
edition = "2021"

[lib]
name = "ercot_data_processor"
path = "src/lib.rs"

[[bin]]
name = "ercot_data_processor"
path = "src/main.rs"

[[bin]]
name = "ercot_prices"
path = "src/bin/ercot_prices.rs"

[[bin]]
name = "gap_analyzer"
path = "src/bin/gap_analyzer.rs"

[[bin]]
name = "parquet_util"
path = "src/parquet_util.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"
glob = "0.3"
anyhow = "1.0"
indicatif = "0.17"
num_cpus = "1.16"
polars = { version = "0.33", features = ["lazy", "csv", "parquet", "ipc", "temporal"] }
chrono = { version = "0.4.31", features = ["serde"] }
zip = "0.6"
regex = "1.10"
plotters = "0.3"
walkdir = "2.5"
tempfile = "3.8"
dotenv = "0.15"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3