[package]
name = "ercot_price_service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ercot-price-server"
path = "src/main.rs"

[dependencies]
# Arrow and Parquet
arrow = "53.0"
arrow-flight = "53.0"
parquet = "53.0"
arrow-json = "53.0"
arrow-array = "53.0"
arrow-schema = "53.0"

# Async runtime
tokio = { version = "1.40", features = ["full"] }
tonic = { version = "0.12", features = ["transport"] }
futures = "0.3"

# Web framework for JSON API
axum = { version = "0.7", features = ["json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"
clap = { version = "4.5", features = ["derive"] }

# Data structures
dashmap = "6.0"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
