[package]
name = "ercot_extractor"
version = "1.0.0"
edition = "2021"

[dependencies]
zip = "0.6"
walkdir = "2.4"
rayon = "1.8"
indicatif = "0.17"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
crossbeam = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
